<android.support.design.widget.CoordinatorLayout
    android:id="@+id/fragment_serie_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frameLayoutSDBackdrop">
                <ImageView
                    android:contentDescription="@string/backdrop_sd_desc"
                    android:id="@+id/imageViewSDBackDrop"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:textSize="12sp"
                        android:visibility="visible"
                        android:layout_margin="3dp"
                        android:background="@drawable/pop_on_the_air"
                        android:text="@string/on_the_air"
                        android:textColor="#FFFF"
                        android:id="@+id/textViewSDOnTheAir"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:background="#96000000"
                        android:textColor="#fff"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:id="@+id/textViewSDTitle"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#96000000"
                        android:textColor="#fff"
                        android:textSize="12sp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="2dp"
                        android:id="@+id/textViewSDGenres" />
                </LinearLayout>
            </FrameLayout>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/AppTheme"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrolling_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="2dp"
                android:id="@+id/cardViewSDInfo"
                tools:context="digitalhouse.android.a0317moacns1c_02.Fragments.SeriesDetailsInfoFragment">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/relativeLayoutSDInfo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/imageViewPoster"
                        android:gravity="start"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/textViewSDDetails"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="12dp"
                            android:text="@string/details"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/textViewSDNetwork"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textViewSDDetails"
                            android:text="@string/emited_by"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textViewSDNetworkCont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textViewSDNetwork"
                            android:paddingStart="4dp"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry"  />

                        <TextView
                            android:id="@+id/textViewSDLaunch"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/textViewSDNetworkCont"
                            android:text="@string/first_air_date"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textViewSDLaunchCont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@id/textViewSDLaunch"
                            android:layout_toEndOf="@id/textViewSDLaunch"
                            android:paddingStart="4dp"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/textViewSDSeasons"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textViewSDLaunchCont"
                            android:text="@string/seasons"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textViewSDSeasonsCont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/textViewSDSeasons"
                            android:layout_toEndOf="@+id/textViewSDSeasons"
                            android:paddingStart="4dp"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry" />

                        <TextView
                            android:id="@+id/textViewSDChapters"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/textViewSDSeasons"
                            android:text="@string/episodes"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textViewSDChaptersCont"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/textViewSDChapters"
                            android:layout_toEndOf="@+id/textViewSDChapters"
                            android:paddingStart="4dp"
                            android:textSize="12sp"
                            tools:ignore="RtlSymmetry" />
                    </RelativeLayout>

                    <View
                        android:id="@+id/separatorLineSD"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/relativeLayoutSDInfo"
                        android:layout_toEndOf="@+id/imageViewPoster"
                        android:background="@color/divider" />

                    <LinearLayout
                        android:id="@+id/linearLayoutSDActions"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/imageViewPoster"
                        android:layout_alignLeft="@+id/separatorLineSD"
                        android:layout_below="@+id/separatorLineSD"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        tools:ignore="RtlHardcoded">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/bookmark"
                            android:contentDescription="@string/button_bookmark"
                            android:src="@drawable/bookmark_border_xhdpi" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/like"
                            android:contentDescription="@string/button_like"
                            android:src="@drawable/fav_border_xhdpi" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:id="@+id/share"
                            android:contentDescription="@string/button_share"
                            android:src="@drawable/share_black_xhdpi" />

                    </LinearLayout>

                    <ImageView
                        android:id="@+id/imageViewPoster"
                        android:layout_width="127dp"
                        android:layout_height="191dp"
                        android:contentDescription="@string/poster_sd_desc"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentStart="true"
                        android:transitionName="poster"/>
                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/framelayoutSDRatings"/>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardCornerRadius="2dp"
                android:id="@+id/cardViewSDSummary">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp">
                    <TextView
                        android:id="@+id/SDSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="5dp"
                        android:paddingBottom="12dp"
                        android:paddingTop="16dp"
                        android:text="@string/summary"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/textViewSDSummary"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"/>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frameLayoutSDMedia" />
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/frameLayoutSDCasting"/>

        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>




</android.support.design.widget.CoordinatorLayout>
